--- a/css/css.css
+++ b/css/css.css
@@ -8,22 +8,38 @@
 body {
     margin: 0;
     font-family: "TT Lakes", sans-serif;
+    color: #1B1C21;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 a {
     text-decoration: none;
+    color: #1B1C21;
 }
 
 a:hover, button:hover {
     cursor: pointer;
 }
 
+button {
+    border: none;
+    background: none;
+    outline: none;
+    padding: 0;
+}
+
 header {
     height: 88px;
-    box-shadow: 0 1px 0 #D9FFF5;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.main-page-header {
+    box-shadow: 0 1px 0 #D9FFF5;
 }
 
 .logo {
@@ -53,10 +69,13 @@ header {
 }
 
 .user-menu {
-    width: 150px;
+    width: 170px;
     display: flex;
     align-items: center;
     justify-content: space-around;
+}
+
+.user-menu--main-page {
     margin-left: auto;
     margin-right: 15px;
     display: none;
@@ -68,6 +87,7 @@ header {
     display: flex;
     align-items: center;
     outline: none;
+    padding: 0;
 }
 
 .icon-button img {
@@ -117,7 +137,6 @@ header {
     border: 2px solid transparent;
     padding: 8px 10px 8px 17px;
     background: #F8F8F8;
-    box-sizing: border-box;
     transition: 0.3s;
 }
 
@@ -199,7 +218,7 @@ header {
         width: 360px;
     }
 
-    .user-menu {
+    .user-menu--main-page {
         width: 150px;
         display: flex;
         align-items: center;
@@ -213,7 +232,7 @@ header {
         margin-right: 50px;
     }
 
-    .logo:before {
+    .logo--768:before {
         content: '';
         position: absolute;
         height: 30px;
@@ -267,3 +286,76 @@ header {
     }
     }
 
+
+
+/* ---------- Mobile Menu -------- */
+
+.mobile-window-container {
+    width: 320px;
+    -webkit-box-shadow: 5px -5px 10px grey;
+    -moz-box-shadow: 5px -5px 10px grey;
+    box-shadow: 5px -5px 10px grey;
+    padding-left: 24px;
+    padding-right: 24px;
+}
+
+.mobile-window-header__close-button {
+    margin-right: 16px;
+}
+
+.mobile-window-menu {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 252px;
+}
+
+.mobile-window-menu__button  {
+    padding: 16px 0px;
+    line-height: 24px;
+}
+
+.mobile-window-menu__button:hover  {
+    color: #7E7E82;
+}
+
+.mobile-window-menu__button:hover::before  {
+    content: '';
+    position: absolute;
+    height: 38px;
+    border-right: 4px solid #41F6D7;
+    margin-left: -24px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+
+
+/* ---------- Footer ---------- */
+
+footer {
+    padding-bottom: 25px;
+}
+
+.e-mail {
+    font-size: 16px;
+    line-height: 24px;
+}
+
+.phone {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: bold;
+}
+
+.language-menu__button {
+    font-size: 16px;
+    line-height: 24px;
+    text-transform: uppercase;
+    margin: 7px;
+    width: 24px;
+    height: 24px;
+}
+
+.language-menu__button:hover {
+    color: #7E7E82;
+}
