--- a/css/css.css
+++ b/css/css.css
@@ -249,7 +249,7 @@ header {
         margin: 0 auto;
     }
 
-    header {
+    .header-1120 {
         display: none;
     }
 
@@ -288,9 +288,9 @@ header {
 
 
 
-/* ---------- Mobile Menu -------- */
+/* ---------- Narrow Menu -------- */
 
-.mobile-window-container {
+.narrow-window-container {
     width: 320px;
     -webkit-box-shadow: 5px -5px 10px grey;
     -moz-box-shadow: 5px -5px 10px grey;
@@ -299,31 +299,33 @@ header {
     padding-right: 24px;
 }
 
-.mobile-window-header__close-button {
+.narrow-window-header__close-button {
     margin-right: 16px;
 }
 
-.mobile-window-menu {
+.narrow-window-menu {
     display: flex;
     flex-direction: column;
-    margin-bottom: 252px;
+    margin-bottom: 70px;
 }
 
-.mobile-window-menu__button  {
+.narrow-window-menu__button  {
     padding: 16px 0px;
     line-height: 24px;
+    position: relative;
 }
 
-.mobile-window-menu__button:hover  {
+.narrow-window-menu__button:hover  {
     color: #7E7E82;
 }
 
-.mobile-window-menu__button:hover::before  {
+.narrow-window-menu__button:hover::before  {
     content: '';
     position: absolute;
     height: 38px;
     border-right: 4px solid #41F6D7;
     margin-left: -24px;
+    bottom: 10px;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -348,14 +350,18 @@ footer {
 }
 
 .language-menu__button {
+    margin: 7px;
+}
+
+
+.square-button {
     font-size: 16px;
     line-height: 24px;
     text-transform: uppercase;
-    margin: 7px;
     width: 24px;
     height: 24px;
 }
 
-.language-menu__button:hover {
+.square-button:hover {
     color: #7E7E82;
 }
